modifies class setupstate and board