@@ -7,20 +7,20 @@ public class SetupState implements GameState {
     @Override
     public void startMatch(Game game) {
         game.getBoard().getTurnOrderTile().setup(game.getPlayers().size());
-        game.getBoard().initTrack();
+        game.getBoard().initTrack(game.getPlayers().size());
         game.setCurrentEra(game.getBoard().refillUpperRow(game.getTribeDeck(), game.getCurrentEra()));
 
         // Chiama il metodo package-private di Game
         game.setupDecks();
 
         Collections.shuffle(game.getPlayers());
-        game.setActivePlayer(game.getPlayers().get(0));
+        game.setActivePlayer(game.getPlayers().getFirst());
 
         for (int i = 0; i < game.getPlayers().size(); i++) {
             Player p = game.getPlayers().get(i);
             Slot slot = game.getBoard().getTurnOrderTile().getSlots().get(i);
             slot.placeTotem(p.getTotem());
-            p.getTotem().moveToSlot(slot);
+            p.getTotem().moveToTurnOrder(slot);
 
             if (i == 0) p.addFood(2);
             else if (i == 1 || i == 2) p.addFood(3);
@@ -30,7 +30,7 @@ public class SetupState implements GameState {
         int cardsToDrawLower = game.getPlayers().size() + 1;
         for (int i = 0; i < cardsToDrawLower; i++) {
             if (!game.getTribeDeck().isEmpty()) {
-                game.getBoard().getLowerRow().add(game.getTribeDeck().remove(0));
+                game.getBoard().getLowerRow().add(game.getTribeDeck().removeFirst());
             }
         }
 
